crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__attribute__multiple_dots.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/attribute/multiple_dots.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        range: 0..46,
        body: [
            Expr(
                StmtExpr {
                    range: 0..10,
                    value: Attribute(
                        ExprAttribute {
                            range: 0..10,
                            value: Attribute(
                                ExprAttribute {
                                    range: 0..6,
                                    value: Name(
                                        ExprName {
                                            range: 0..5,
                                            id: Name("extra"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 6..6,
                                    },
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dot"),
                                range: 7..10,
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 19..27,
                    value: Call(
                        ExprCall {
                            range: 19..27,
                            func: Attribute(
                                ExprAttribute {
                                    range: 19..27,
                                    value: Call(
                                        ExprCall {
                                            range: 19..27,
                                            func: Attribute(
                                                ExprAttribute {
                                                    range: 19..22,
                                                    value: Name(
                                                        ExprName {
                                                            range: 19..22,
                                                            id: Name("__xonsh__"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("cmd"),
                                                        range: 19..22,
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 19..27,
                                                args: [
                                                    StringLiteral(
                                                        ExprStringLiteral {
                                                            range: 19..27,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 19..27,
                                                                        value: "....dots",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Single,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("hide"),
                                        range: 19..27,
                                    },
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 19..27,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 36..45,
                    value: Call(
                        ExprCall {
                            range: 36..45,
                            func: Attribute(
                                ExprAttribute {
                                    range: 36..45,
                                    value: Call(
                                        ExprCall {
                                            range: 36..45,
                                            func: Attribute(
                                                ExprAttribute {
                                                    range: 36..39,
                                                    value: Name(
                                                        ExprName {
                                                            range: 36..39,
                                                            id: Name("__xonsh__"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    attr: Identifier {
                                                        id: Name("cmd"),
                                                        range: 36..39,
                                                    },
                                                    ctx: Load,
                                                },
                                            ),
                                            arguments: Arguments {
                                                range: 36..45,
                                                args: [
                                                    StringLiteral(
                                                        ExprStringLiteral {
                                                            range: 36..45,
                                                            value: StringLiteralValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 36..45,
                                                                        value: ".....dots",
                                                                        flags: StringLiteralFlags {
                                                                            quote_style: Single,
                                                                            prefix: Empty,
                                                                            triple_quoted: false,
                                                                        },
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                keywords: [],
                                            },
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("hide"),
                                        range: 36..45,
                                    },
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 36..45,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | extra..dot
  |       ^ Syntax Error: Expected an identifier
2 | multiple....dots
3 | multiple.....dots
  |
